# langgraph_workflow_engine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.dashboard  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
alembic/: env.py
aws_automation_scripts/: ec2.py  lambda.py  rds.py
aws_testing_scripts/: README.md  test_ec2.py
backend/: main.py
config/: __init__.py  database_config.py  langraph_config.py  llm_config.py  logging_config.py  security.py  settings.py
docker/: Dockerfile.frontend  docker-compose.yml
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  LANGGRAPH_GUIDE.md  LOAD_TEST_RESULTS.md  NODE_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  TOOL_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md
frontend/: package-lock.json  package.json
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
monitoring/: alerts.yml  prometheus.yml
notebooks/: 10_Production_Workflows.ipynb  1_LangGraph_Introduction.ipynb  2_Building_Simple_Workflows.ipynb  3_Multi_Agent_Workflows.ipynb  4_Conditional_Routing.ipynb  5_Error_Handling.ipynb  6_Memory_Management.ipynb  7_Tool_Integration.ipynb  8_Supervision.ipynb  9_Performance_Optimization.ipynb
scripts/: benchmark.py  create_example_workflows.py  export_workflows.py  import_workflows.py  init_db.py  load_test.py  seed_data.py  seed_db.py  test_workflow.py
tests/: conftest.py
(+214 files in other folders)
